--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Swagata Sur — Associate Data Scientist</title>
+
+  <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
+
 <body>
 
-  <!-- top nav -->
+  <!-- Top Nav -->
   <header class="topnav">
     <div class="nav-container">
       <div class="nav-logo">Swagata Sur</div>
@@ -19,13 +27,13 @@
         <a href="academics.html"><i class="fas fa-graduation-cap"></i> Academics</a>
         <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
       </nav>
-
     </div>
   </header>
 
-  <!-- hero -->
+  <!-- Hero -->
   <section class="hero" id="top">
     <div class="hero-content container">
+
       <div class="hero-left">
         <h1 class="title">Hi, I’m <span style="color:#fff">Swagata</span></h1>
         <div class="accent"></div>
@@ -35,16 +43,15 @@
           <a class="icon-btn" href="https://www.linkedin.com/in/swagata-sur" target="_blank" title="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
           </a>
-        
+
           <a class="icon-btn" href="mailto:swagata.stats@gmail.com" title="Email">
             <i class="fas fa-envelope"></i>
           </a>
-        
+
           <a class="icon-btn" href="https://github.com/swagata-sur20" target="_blank" title="GitHub">
             <i class="fab fa-github"></i>
           </a>
         </div>
-
       </div>
 
       <div class="hero-right">
@@ -52,6 +59,7 @@
           <img src="Swagata-sur.jpg" alt="Swagata Sur">
         </div>
       </div>
+
     </div>
   </section>
 
@@ -60,67 +68,74 @@
     <h2 class="section">About Me</h2>
     <div class="card">
       <p>
-        I’m an Associate Data Scientist with hands-on experience in developing analytics solutions within the compliance space. I hold a postgraduate degree in Statistics from the University of Delhi and currently work at a leading French bank, where I focus on blending statistical modeling with AI to drive impactful, data-driven solutions. I’ve worked on projects spanning threshold calibration, Generative AI–based anomaly classification, RAG pipeline development and end to end sanctions monitoring pipelines.
+        I’m an Associate Data Scientist with hands-on experience in developing analytics solutions within the compliance space.
+        I hold a postgraduate degree in Statistics from the University of Delhi and currently work at a leading French bank,
+        where I focus on blending statistical modeling with AI to drive impactful, data-driven solutions.
+        I’ve worked on projects spanning threshold calibration, Generative AI–based anomaly classification,
+        RAG pipeline development and end-to-end sanctions monitoring pipelines.
       </p>
+
       <p>
-        Outside of work, I enjoy playing chess, traveling to new places, and exploring cuisines from the different corners of the world. Whether perfecting Indian curries or rolling fresh pasta, cooking is how I unwind and explore cultures.
+        Outside of work, I enjoy playing chess, traveling to new places, and exploring cuisines from different corners of the world.
+        Whether perfecting Indian curries or rolling fresh pasta, cooking is how I unwind and explore cultures.
       </p>
-    </div>
-  </section>
-  
-  <!-- What I Do -->
-  <section id="what-i-do" class="reveal container">
-    <h2 class="section">I Reveal What Data Hides</h2>
-  
-    <div class="feature-grid">
-  
-      <div class="feature-card">
-        <div class="feature-icon">
-          <i class="fas fa-chart-line"></i>
-        </div>
-        <h3>Data Science & Analytics</h3>
-        <p>
-          Transform raw data into actionable insights using statistical modeling,
-          exploratory analysis, and business-driven metrics.
-        </p>
-      </div>
-  
-      <div class="feature-card">
-        <div class="feature-icon">
-          <i class="fas fa-brain"></i>
-        </div>
-        <h3>Machine Learning</h3>
-        <p>
-          Build, evaluate, and deploy predictive models for real-world business
-          problems in risk, compliance, and monitoring systems.
-        </p>
-      </div>
-  
-      <div class="feature-card">
-        <div class="feature-icon">
-          <i class="fas fa-robot"></i>
-        </div>
-        <h3>Generative AI & RAG</h3>
-        <p>
-          Design intelligent pipelines using LLMs, LangChain, LangGraph and RAG
-          for automated reasoning, classification, and decision support.
-        </p>
-      </div>
-  
-      <div class="feature-card">
-        <div class="feature-icon">
-          <i class="fas fa-chart-pie"></i>
-        </div>
-        <h3>Visualization & Insights</h3>
-        <p>
-          Communicate insights through intuitive dashboards and storytelling
-          using Power BI, Kibana, and data-driven narratives.
-        </p>
-      </div>
-  
     </div>
   </section>
 
+  <!-- What I Do -->
+  <section id="what-i-do" class="reveal container">
+    <h2 class="section">I Reveal What Data Hides</h2>
+
+    <div class="feature-wrapper">
+      <div class="feature-grid">
+
+        <div class="feature-card">
+          <div class="feature-icon">
+            <i class="fas fa-chart-line"></i>
+          </div>
+          <h3>Data Science & Analytics</h3>
+          <p>
+            Transform raw data into actionable insights using statistical modeling,
+            exploratory analysis, and business-driven metrics.
+          </p>
+        </div>
+
+        <div class="feature-card">
+          <div class="feature-icon">
+            <i class="fas fa-brain"></i>
+          </div>
+          <h3>Machine Learning</h3>
+          <p>
+            Build, evaluate, and deploy predictive models for real-world business
+            problems in risk, compliance, and monitoring systems.
+          </p>
+        </div>
+
+        <div class="feature-card">
+          <div class="feature-icon">
+            <i class="fas fa-robot"></i>
+          </div>
+          <h3>Generative AI & RAG</h3>
+          <p>
+            Design intelligent pipelines using LLMs, LangChain, LangGraph and RAG
+            for automated reasoning, classification, and decision support.
+          </p>
+        </div>
+
+        <div class="feature-card">
+          <div class="feature-icon">
+            <i class="fas fa-chart-pie"></i>
+          </div>
+          <h3>Visualization & Insights</h3>
+          <p>
+            Communicate insights through intuitive dashboards and storytelling
+            using Power BI, Kibana, and data-driven narratives.
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </section>
 
   <!-- Key Skills -->
   <section id="skills" class="reveal container">
@@ -135,7 +150,7 @@
         <div class="skill-pill">LangChain</div>
         <div class="skill-pill">RAG</div>
         <div class="skill-pill">Python</div>
-        <div class="skill-pill">Pyspark</div>
+        <div class="skill-pill">PySpark</div>
         <div class="skill-pill">Kedro</div>
         <div class="skill-pill">SQL</div>
       </div>
@@ -148,7 +163,10 @@
     <div class="card">
       <div class="experience-sub">Société Générale</div>
       <p>
-        Worked on multiple data science and analytics projects including threshold calibration, a Generative AI Proof of Concept for automated anomaly classification, a RAG agentic pipeline using langgraph and an end-to-end sanction-embargo monitoring pipeline with Kedro, CI/CD, and Kibana dashboards.
+        Worked on multiple data science and analytics projects including threshold calibration,
+        a Generative AI Proof of Concept for automated anomaly classification,
+        a RAG agentic pipeline using LangGraph and an end-to-end sanction-embargo monitoring pipeline
+        with Kedro, CI/CD, and Kibana dashboards.
       </p>
     </div>
   </section>
@@ -163,54 +181,58 @@
   </section>
 
   <!-- Contact -->
-<section id="contact" class="reveal container">
-  <h2 class="section">Contact</h2>
-  <div class="card">
-    <div class="contact-row">
-      <div class="contact-col">
-        <h3>Connect With Me</h3>
-        <div class="contact-socials">
+  <section id="contact" class="reveal container">
+    <h2 class="section">Contact</h2>
+    <div class="card">
+      <div class="contact-row">
 
-          <a class="icon-btn" href="https://www.linkedin.com/in/swagata-sur" target="_blank" title="LinkedIn">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
+        <div class="contact-col">
+          <h3>Connect With Me</h3>
+          <div class="contact-socials">
 
-          <a class="icon-btn" href="https://github.com/swagata-sur20" target="_blank" title="GitHub">
-            <i class="fab fa-github"></i>
-          </a>
+            <a class="icon-btn" href="https://www.linkedin.com/in/swagata-sur" target="_blank">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
 
-          <a class="icon-btn" href="https://www.instagram.com/swa_ga_taa" target="_blank" title="Instagram">
-            <i class="fab fa-instagram"></i>
-          </a>
+            <a class="icon-btn" href="https://github.com/swagata-sur20" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
 
+            <a class="icon-btn" href="https://www.instagram.com/swa_ga_taa" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+
+          </div>
         </div>
-      </div>
 
-      <div class="contact-col">
-        <h3>Contact</h3>
-        <p>Email: <a href="mailto:swagata.stats@gmail.com">swagata.stats@gmail.com</a></p>
+        <div class="contact-col">
+          <h3>Contact</h3>
+          <p>Email: <a href="mailto:swagata.stats@gmail.com">swagata.stats@gmail.com</a></p>
+        </div>
+
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<footer>© 2026 Swagata Sur</footer>
+  <footer>© 2026 Swagata Sur</footer>
 
+  <!-- Scroll Reveal Script -->
   <script defer>
-window.addEventListener('DOMContentLoaded', () => {
-  if ('scrollRestoration' in history) history.scrollRestoration = 'manual';
-  window.scrollTo(0,0);
-  function revealOnScroll(){
-    document.querySelectorAll('.reveal').forEach(el=>{
-      const r=el.getBoundingClientRect();
-      if(r.top<window.innerHeight-80) el.classList.add('show');
-    });
-  }
-  revealOnScroll();
-  window.addEventListener('scroll', revealOnScroll);
-});
-</script>
+    window.addEventListener('DOMContentLoaded', () => {
+      if ('scrollRestoration' in history) history.scrollRestoration = 'manual';
+      window.scrollTo(0, 0);
 
+      function revealOnScroll() {
+        document.querySelectorAll('.reveal').forEach(el => {
+          const r = el.getBoundingClientRect();
+          if (r.top < window.innerHeight - 80) el.classList.add('show');
+        });
+      }
+
+      revealOnScroll();
+      window.addEventListener('scroll', revealOnScroll);
+    });
+  </script>
 
 </body>
 </html>
