--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
@@ -40,15 +37,13 @@
         <p class="tag">Associate Data Scientist | Analytics | Generative AI | ML</p>
 
         <div class="socials">
-          <a class="icon-btn" href="https://www.linkedin.com/in/swagata-sur" target="_blank" title="LinkedIn">
+          <a class="icon-btn" href="https://www.linkedin.com/in/swagata-sur" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-
-          <a class="icon-btn" href="mailto:swagata.stats@gmail.com" title="Email">
+          <a class="icon-btn" href="mailto:swagata.stats@gmail.com">
             <i class="fas fa-envelope"></i>
           </a>
-
-          <a class="icon-btn" href="https://github.com/swagata-sur20" target="_blank" title="GitHub">
+          <a class="icon-btn" href="https://github.com/swagata-sur20" target="_blank">
             <i class="fab fa-github"></i>
           </a>
         </div>
@@ -71,165 +66,48 @@
         I’m an Associate Data Scientist with hands-on experience in developing analytics solutions within the compliance space.
         I hold a postgraduate degree in Statistics from the University of Delhi and currently work at a leading French bank,
         where I focus on blending statistical modeling with AI to drive impactful, data-driven solutions.
-        I’ve worked on projects spanning threshold calibration, Generative AI–based anomaly classification,
-        RAG pipeline development and end-to-end sanctions monitoring pipelines.
       </p>
-
       <p>
         Outside of work, I enjoy playing chess, traveling to new places, and exploring cuisines from different corners of the world.
-        Whether perfecting Indian curries or rolling fresh pasta, cooking is how I unwind and explore cultures.
+        Cooking is how I unwind and explore cultures.
       </p>
     </div>
   </section>
 
+  <!-- What I Do -->
   <section id="what-i-do" class="reveal container">
     <h2 class="section">I Reveal What Data Hides</h2>
-  
+
     <div class="feature-grid">
-  
+
       <div class="feature-card">
-        <div class="feature-icon">
-          <i class="fas fa-chart-line"></i>
-        </div>
+        <div class="feature-icon"><i class="fas fa-chart-line"></i></div>
         <h3>Data Science & Analytics</h3>
-        <p>
-          Transform raw data into actionable insights using statistical modeling,
-          exploratory analysis, and business-driven metrics.
-        </p>
+        <p>Transform raw data into actionable insights using statistical modeling and exploratory analysis.</p>
       </div>
-  
+
       <div class="feature-card">
-        <div class="feature-icon">
-          <i class="fas fa-brain"></i>
-        </div>
+        <div class="feature-icon"><i class="fas fa-brain"></i></div>
         <h3>Machine Learning</h3>
-        <p>
-          Build, evaluate, and deploy predictive models for real-world business
-          problems in risk, compliance, and monitoring systems.
-        </p>
+        <p>Build, evaluate, and deploy predictive models for real-world business problems.</p>
       </div>
-  
+
       <div class="feature-card">
-        <div class="feature-icon">
-          <i class="fas fa-robot"></i>
-        </div>
+        <div class="feature-icon"><i class="fas fa-robot"></i></div>
         <h3>Generative AI & RAG</h3>
-        <p>
-          Design intelligent pipelines using LLMs, LangChain, LangGraph and RAG
-          for automated reasoning, classification, and decision support.
-        </p>
+        <p>Design intelligent pipelines using LLMs, LangChain, LangGraph and RAG.</p>
       </div>
-  
+
       <div class="feature-card">
-        <div class="feature-icon">
-          <i class="fas fa-chart-pie"></i>
-        </div>
+        <div class="feature-icon"><i class="fas fa-chart-pie"></i></div>
         <h3>Visualization & Insights</h3>
-        <p>
-          Communicate insights through intuitive dashboards and storytelling
-          using Power BI, Kibana, and data-driven narratives.
-        </p>
+        <p>Communicate insights through dashboards and data-driven storytelling.</p>
       </div>
-  
-    </div>
-  </section>
 
-  <!-- Key Skills -->
-  <section id="skills" class="reveal container">
-    <h2 class="section">Key Skills</h2>
-    <div class="card">
-      <div class="skills-list">
-        <div class="skill-pill">Data Science</div>
-        <div class="skill-pill">Analytics</div>
-        <div class="skill-pill">Data Visualization</div>
-        <div class="skill-pill">Machine Learning</div>
-        <div class="skill-pill">Generative AI</div>
-        <div class="skill-pill">LangChain</div>
-        <div class="skill-pill">RAG</div>
-        <div class="skill-pill">Python</div>
-        <div class="skill-pill">PySpark</div>
-        <div class="skill-pill">Kedro</div>
-        <div class="skill-pill">SQL</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Experience -->
-  <section id="experience" class="reveal container">
-    <h2 class="section">Experience</h2>
-    <div class="card">
-      <div class="experience-sub">Société Générale</div>
-      <p>
-        Worked on multiple data science and analytics projects including threshold calibration,
-        a Generative AI Proof of Concept for automated anomaly classification,
-        a RAG agentic pipeline using LangGraph and an end-to-end sanction-embargo monitoring pipeline
-        with Kedro, CI/CD, and Kibana dashboards.
-      </p>
-    </div>
-  </section>
-
-  <!-- Education -->
-  <section id="education" class="reveal container">
-    <h2 class="section">Education</h2>
-    <div class="card">
-      <p><b>M.Sc. in Statistics</b> — University of Delhi (2023)</p>
-      <p><b>B.Sc. in Statistics</b> — University of Calcutta (2021)</p>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact" class="reveal container">
-    <h2 class="section">Contact</h2>
-    <div class="card">
-      <div class="contact-row">
-
-        <div class="contact-col">
-          <h3>Connect With Me</h3>
-          <div class="contact-socials">
-
-            <a class="icon-btn" href="https://www.linkedin.com/in/swagata-sur" target="_blank">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-
-            <a class="icon-btn" href="https://github.com/swagata-sur20" target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-
-            <a class="icon-btn" href="https://www.instagram.com/swa_ga_taa" target="_blank">
-              <i class="fab fa-instagram"></i>
-            </a>
-
-          </div>
-        </div>
-
-        <div class="contact-col">
-          <h3>Contact</h3>
-          <p>Email: <a href="mailto:swagata.stats@gmail.com">swagata.stats@gmail.com</a></p>
-        </div>
-
-      </div>
     </div>
   </section>
 
   <footer>© 2026 Swagata Sur</footer>
-
-  <!-- Scroll Reveal Script -->
-  <script defer>
-    window.addEventListener('DOMContentLoaded', () => {
-      if ('scrollRestoration' in history) history.scrollRestoration = 'manual';
-      window.scrollTo(0, 0);
-
-      function revealOnScroll() {
-        document.querySelectorAll('.reveal').forEach(el => {
-          const r = el.getBoundingClientRect();
-          if (r.top < window.innerHeight - 80) el.classList.add('show');
-        });
-      }
-
-      revealOnScroll();
-      window.addEventListener('scroll', revealOnScroll);
-    });
-  </script>
 
 </body>
 </html>
