--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
+<script>
+  window.addEventListener('DOMContentLoaded', () => {
+    function revealOnScroll(){
+      document.querySelectorAll('.reveal').forEach(el=>{
+        const r = el.getBoundingClientRect();
+        if(r.top < window.innerHeight - 80) {
+          el.classList.add('show');
+        }
+      });
+    }
+    revealOnScroll();
+    window.addEventListener('scroll', revealOnScroll);
+  });
+</script>
 
 <body>
 
