--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <nav class="nav-links">
         <a href="index.html"><i class="fas fa-home"></i> Home</a>
         <a href="projects.html"><i class="fas fa-diagram-project"></i> Projects</a>
-        <a href="academics.html"><i class="fas fa-graduation-cap"></i> Academics</a>
-        <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+        <!-- <a href="academics.html"><i class="fas fa-graduation-cap"></i> Academics</a> -->
+        <!-- <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a> -->
       </nav>
     </div>
   </header>
