--- a/projects.html
+++ b/projects.html
@@ -134,7 +134,7 @@
       <p>
         Adapted and trained models for two distinct client types: Individuals(sanctioned persons) and 
         Corporates(sanctioned entities).
-        - Individuals:Employed a rule-based approach combined with text similarity metrics (specifically Jaro distance) 
+        <br>- Individuals:Employed a rule-based approach combined with text similarity metrics (specifically Jaro distance) 
         to assess the resemblance between client names and names on sanction lists. The model calculates edit distances 
         and applies thresholds to determine if an alert is a potential match.
         - Corporates: Developed a machine learning model using the Extra Trees classifier. Employed oversampling for "True" labeled
