--- a/projects.html
+++ b/projects.html
@@ -94,8 +94,6 @@
     <nav class="nav-links">
       <a href="index.html"><i class="fas fa-home"></i> Home</a>
       <a href="projects.html"><i class="fas fa-diagram-project"></i> Projects</a>
-      <a href="academics.html"><i class="fas fa-graduation-cap"></i> Academics</a>
-      <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
     </nav>
   </div>
 </header>
@@ -238,7 +236,7 @@
 
 </section>
 
-<footer>© 2026 Swagata Sur. Built with 💙 using HTML & CSS.</footer>
+<footer>© 2026 Swagata Sur</footer>
 
 </body>
 </html>
